[gd_scene load_steps=3 format=3 uid="uid://wvtjpok0dq12"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_gop6n"]
[ext_resource type="PackedScene" uid="uid://bnkmpi7b0uqn3" path="res://scenes/user_interfaces/level_button.tscn" id="2_atqhl"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_gop6n")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "game name"

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 44.0
offset_right = -104.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = 36.0
offset_right = 137.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="LevelSelectMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelSelectMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Select level"

[node name="Level1Button" parent="LevelSelectMenu" instance=ExtResource("2_atqhl")]
layout_mode = 1
offset_left = -24.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 67.0

[connection signal="pressed" from="MainMenu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_quit_button_pressed"]
